# ori-term

./: .gitignore  BUILD_NUMBER  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  bundle-macos.sh  clippy.toml  lefthook.yml  opencode.json  test-all.sh  vttest_2.7+20230201-1_amd64.deb
oriterm_core/: Cargo.toml
oriterm_core/benches/: grid.rs  vte_throughput.rs
oriterm_core/src/: lib.rs
oriterm_core/src/cell/: mod.rs
oriterm_core/src/color/: palette.rs
oriterm_core/src/event/: mod.rs  tests.rs
oriterm_core/src/grid/: mod.rs  tests.rs
oriterm_core/src/image/: cache.rs  decode.rs  mod.rs  tests.rs
oriterm_core/src/paste/: mod.rs  tests.rs
oriterm_core/src/search/: find.rs  mod.rs  tests.rs  text.rs
oriterm_core/src/selection/: boundaries.rs  mod.rs  tests.rs  text.rs
oriterm_core/src/sync/: mod.rs  tests.rs
oriterm_core/src/term/: alt_screen.rs  image_config.rs  mod.rs  renderable.rs  shell_state.rs  snapshot.rs  tests.rs
oriterm_core/tests/: alloc_regression.rs  rss_regression.rs  vttest.rs
oriterm_core/tests/snapshots/: vttest__120x40_00_main_menu.snap  vttest__120x40_01_cursor_01.snap  vttest__120x40_01_cursor_02.snap  vttest__120x40_01_cursor_03.snap  vttest__120x40_01_cursor_04.snap  vttest__120x40_01_cursor_05.snap  vttest__120x40_01_cursor_06.snap  vttest__120x40_02_screen_01.snap  vttest__120x40_02_screen_01.snap.new  vttest__120x40_02_screen_02.snap  vttest__120x40_02_screen_03.snap  vttest__120x40_02_screen_04.snap  vttest__120x40_02_screen_05.snap  vttest__120x40_02_screen_06.snap  vttest__120x40_02_screen_07.snap  vttest__120x40_02_screen_08.snap  vttest__120x40_02_screen_09.snap  vttest__120x40_02_screen_10.snap  vttest__120x40_02_screen_11.snap  vttest__120x40_02_screen_12.snap  vttest__120x40_02_screen_13.snap  vttest__120x40_02_screen_14.snap  vttest__120x40_02_screen_15.snap  vttest__80x24_00_main_menu.snap  vttest__80x24_01_cursor_01.snap  vttest__80x24_01_cursor_02.snap  vttest__80x24_01_cursor_03.snap  (+58 more)
oriterm_mux/: Cargo.toml
oriterm_mux/src/: lib.rs  one_shot.rs
oriterm_mux/src/id/: mod.rs  (+1 more)
oriterm_mux/tests/: contract.rs  e2e.rs
(+1467 files in other folders)
