[package]
name = "oriterm_mux"
version.workspace = true
edition.workspace = true
description = "Pane server for oriterm: PTY management, pane lifecycle, daemon server, and IPC protocol"
license.workspace = true

[dependencies]
base64 = "0.22"
bincode = "1.3"
crossbeam-channel = "0.5"
log = "0.4"
mio = { version = "1", features = ["os-poll", "net", "os-ext"] }
oriterm_core = { path = "../oriterm_core" }
oriterm_ipc = { path = "../oriterm_ipc" }
parking_lot = "0.12"
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive", "rc"] }
vte = { version = "0.15.0", features = ["ansi"] }
zstd = "0.13"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "oriterm-mux"
path = "src/bin/oriterm_mux.rs"

[lints]
workspace = true
